ecosystem and function defintion for impute updated

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ An R package for streamlining the front end of the machine learning workflow.
 
 ---
 
-Common to the front end of most machine learning pipelines is an exploratory data analysis (EDA) and feature preprocessing. EDA's facilitate a better understanding of the data being analyzed and allows for a targeted and more robust model development while feature imputation and preprocessing is a requirement for many machine learning alogirthms. `nurser` aims to streamline the front end of the machine learning pipeline by generating descriptive summary tables and figures, automating feature imputation, and automating preprocessing. Automated feature imputations and preprocessing detection has been implemented to minimize time and optimize the processing methods used. The functions in `nurser` were developed to provide useful and informative metrics that are applicable to a wide array of datasets.   
+Common to the front end of most machine learning pipelines is an exploratory data analysis (EDA) and feature preprocessing. EDA's facilitate a better understanding of the data being analyzed and allows for a targeted and more robust model development while feature imputation and preprocessing is a requirement for many machine learning alogirthms. `nurser` aims to streamline the front end of the machine learning pipeline by generating descriptive summary tables and figures, various feature imputation summaries, and automating preprocessing. Automated preprocessing detection has been implemented to minimize time and optimize the processing methods used. The functions in `nurser` were developed to provide useful and informative metrics that are applicable to a wide array of datasets.   
 
 _`nurser` was developed as part of DSCI 524 of the MDS program at UBC._  
 
@@ -56,7 +56,7 @@ The package includes the following three functions:
 |Function|Input|Output|Description|
 |--------|-----|------|-----------|
 |`eda`|- a tibble or dataframe|- an R dictionary|- Dictionary that contains histogram and summary statistics for each column|
-|`impute`|- a tibble or dataframe|- a tibble with imputed values|- Functionality for automatic imputation detection and user defined imputation method selection|
+|`impute_summary`|- a dataframe|- a list with summary statistics and outputs of different imputation methods|- Functionality for consolidating several imputation methods|
 |`preproc`|- a tibble or dataframe|- a tibble with preprocessed features|- Functionality for automatic feature preprocessing detection and user defined feature preprocessing|  
 
 
@@ -64,10 +64,16 @@ The package includes the following three functions:
 
 ---
 
-`nurser` was developed to closely align with:  
+`nurser` was developed to align with:  
 
-- [caret](https://cran.r-project.org/web/packages/caret/index.html)    
-- [tidyverse](https://www.tidyverse.org/)    
+- [tidyverse](https://www.tidyverse.org/) 
+
+The `impute_summary` function leveraged the imputation  methods found in the following packages:  
+
+- [Hmisc](https://cran.r-project.org/web/packages/Hmisc/index.html)    
+- [mi](https://cran.r-project.org/web/packages/mi/index.html)    
+- [mice](https://cran.r-project.org/web/packages/mice/index.html)   
+- [missForest](https://cran.r-project.org/web/packages/missForest/index.html)  
  
 
 However, the functions herein streamline and automate the front-end machine learning pipeline for use with any machine learning package.  
