Updated eda function description in ReadMe.

--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ The package includes the following three functions:
 
 |Function|Input|Output|Description|
 |--------|-----|------|-----------|
-|`eda`|- a tibble or dataframe|- an R dictionary|- Dictionary that contains histogram and summary statistics for each column|
+|`eda`|- a dataframe|- a list that contains histogram and summary statistics for each column|- Functionality for easy explanatory data analysis. |
 |`impute_summary`|- a dataframe|- a list with summary statistics and outputs of different imputation methods|- Functionality for consolidating several imputation methods|
 |`preproc`|- a tibble or dataframe|- a tibble with preprocessed features|- Functionality for automatic feature preprocessing detection and user defined feature preprocessing|  
 
@@ -83,7 +83,7 @@ However, the functions herein streamline and automate the front-end machine lear
 
 --- 
 
-- testhat 
+- ggplot2=3.2.1
 
 ### Usage
 
